@@ -1,3 +1,4 @@
+3/1/12 make sensor diameter an attribute of the detector probe
 # 0.00.14 (62016) Feb 29, 2012
 2/28/12 add stub for photon view
 2/28/12 add clock to Beers model, in preparation for animating photons
